--- a/src/main/webapp/app/entities/ponude/list/ponude.component.html
+++ b/src/main/webapp/app/entities/ponude/list/ponude.component.html
@@ -70,66 +70,66 @@
               <fa-icon class="p-1" icon="sort"></fa-icon>
             </div>
           </th>
-          <!--          <th scope="col" jhiSortBy="ponudjenaVrijednost">-->
-          <!--            <div class="d-flex">-->
-          <!--              <span jhiTranslate="tenderApp.ponude.ponudjenaVrijednost">Ponudjena Vrijednost</span>-->
-          <!--              <fa-icon class="p-1" icon="sort"></fa-icon>-->
-          <!--            </div>-->
-          <!--          </th>-->
-          <!--          <th scope="col" jhiSortBy="rokIsporuke">-->
-          <!--            <div class="d-flex">-->
-          <!--              <span jhiTranslate="tenderApp.ponude.rokIsporuke">Rok Isporuke</span>-->
-          <!--              <fa-icon class="p-1" icon="sort"></fa-icon>-->
-          <!--            </div>-->
-          <!--          </th>-->
-          <!--          <th scope="col" jhiSortBy="jedinicnaCijena">-->
-          <!--            <div class="d-flex">-->
-          <!--              <span jhiTranslate="tenderApp.ponude.jedinicnaCijena">Jedinicna Cijena</span>-->
-          <!--              <fa-icon class="p-1" icon="sort"></fa-icon>-->
-          <!--            </div>-->
-          <!--          </th>-->
-          <!--          <th scope="col" jhiSortBy="selected">-->
-          <!--            <div class="d-flex">-->
-          <!--              <span jhiTranslate="tenderApp.ponude.selected">Selected</span>-->
-          <!--              <fa-icon class="p-1" icon="sort"></fa-icon>-->
-          <!--            </div>-->
-          <!--          </th>-->
-          <!--          <th scope="col" jhiSortBy="sifraPonudjaca">-->
-          <!--            <div class="d-flex">-->
-          <!--              <span jhiTranslate="tenderApp.ponude.sifraPonudjaca">Sifra Ponudjaca</span>-->
-          <!--              <fa-icon class="p-1" icon="sort"></fa-icon>-->
-          <!--            </div>-->
-          <!--          </th>-->
-          <!--          <th scope="col" jhiSortBy="karakteristika">-->
-          <!--            <div class="d-flex">-->
-          <!--              <span jhiTranslate="tenderApp.ponude.karakteristika">Karakteristika</span>-->
-          <!--              <fa-icon class="p-1" icon="sort"></fa-icon>-->
-          <!--            </div>-->
-          <!--          </th>-->
-          <th scope="col" jhiSortBy="kreirano od">
+          <th scope="col" jhiSortBy="ponudjenaVrijednost">
             <div class="d-flex">
-              <span>Kreirao zapi</span>
+              <span jhiTranslate="tenderApp.ponude.ponudjenaVrijednost">Ponudjena Vrijednost</span>
               <fa-icon class="p-1" icon="sort"></fa-icon>
             </div>
           </th>
-          <th scope="col" jhiSortBy="datum kreiranja">
+          <th scope="col" jhiSortBy="rokIsporuke">
             <div class="d-flex">
-              <span>Datum kreiranja zapisa</span>
+              <span jhiTranslate="tenderApp.ponude.rokIsporuke">Rok Isporuke</span>
               <fa-icon class="p-1" icon="sort"></fa-icon>
             </div>
           </th>
-          <th scope="col" jhiSortBy="zadnji izmjenio">
+          <th scope="col" jhiSortBy="jedinicnaCijena">
             <div class="d-flex">
-              <span>Zadnji izmjenio zapis</span>
+              <span jhiTranslate="tenderApp.ponude.jedinicnaCijena">Jedinicna Cijena</span>
               <fa-icon class="p-1" icon="sort"></fa-icon>
             </div>
           </th>
-          <th scope="col" jhiSortBy="datum zadnje izmjene">
+          <th scope="col" jhiSortBy="selected">
             <div class="d-flex">
-              <span>Datum zadnje izmjene</span>
+              <span jhiTranslate="tenderApp.ponude.selected">Selected</span>
               <fa-icon class="p-1" icon="sort"></fa-icon>
             </div>
           </th>
+          <th scope="col" jhiSortBy="sifraPonudjaca">
+            <div class="d-flex">
+              <span jhiTranslate="tenderApp.ponude.sifraPonudjaca">Sifra Ponudjaca</span>
+              <fa-icon class="p-1" icon="sort"></fa-icon>
+            </div>
+          </th>
+          <th scope="col" jhiSortBy="karakteristika">
+            <div class="d-flex">
+              <span jhiTranslate="tenderApp.ponude.karakteristika">Karakteristika</span>
+              <fa-icon class="p-1" icon="sort"></fa-icon>
+            </div>
+          </th>
+          <!--          <th scope="col" jhiSortBy="kreirano od">-->
+          <!--            <div class="d-flex">-->
+          <!--              <span>Kreirao zapi</span>-->
+          <!--              <fa-icon class="p-1" icon="sort"></fa-icon>-->
+          <!--            </div>-->
+          <!--          </th>-->
+          <!--          <th scope="col" jhiSortBy="datum kreiranja">-->
+          <!--            <div class="d-flex">-->
+          <!--              <span>Datum kreiranja zapisa</span>-->
+          <!--              <fa-icon class="p-1" icon="sort"></fa-icon>-->
+          <!--            </div>-->
+          <!--          </th>-->
+          <!--          <th scope="col" jhiSortBy="zadnji izmjenio">-->
+          <!--            <div class="d-flex">-->
+          <!--              <span>Zadnji izmjenio zapis</span>-->
+          <!--              <fa-icon class="p-1" icon="sort"></fa-icon>-->
+          <!--            </div>-->
+          <!--          </th>-->
+          <!--          <th scope="col" jhiSortBy="datum zadnje izmjene">-->
+          <!--            <div class="d-flex">-->
+          <!--              <span>Datum zadnje izmjene</span>-->
+          <!--              <fa-icon class="p-1" icon="sort"></fa-icon>-->
+          <!--            </div>-->
+          <!--          </th>-->
           <th scope="col"></th>
         </tr>
       </thead>
@@ -143,16 +143,16 @@
           <td>{{ ponude.brojPartije }}</td>
           <td>{{ ponude.nazivProizvodjaca }}</td>
           <td>{{ ponude.zasticeniNaziv }}</td>
-          <!--          <td>{{ ponude.ponudjenaVrijednost }}</td>-->
-          <!--          <td>{{ ponude.rokIsporuke }}</td>-->
-          <!--          <td>{{ ponude.jedinicnaCijena }}</td>-->
-          <!--          <td>{{ ponude.selected }}</td>-->
-          <!--          <td>{{ ponude.sifraPonudjaca }}</td>-->
-          <!--          <td>{{ ponude.karakteristika }}</td>-->
-          <td>{{ ponude.createdBy }}</td>
-          <td>{{ ponude.createdDate }}</td>
-          <td>{{ ponude.lastModifiedBy }}</td>
-          <td>{{ ponude.lastModifiedDate }}</td>
+          <td>{{ ponude.ponudjenaVrijednost }}</td>
+          <td>{{ ponude.rokIsporuke }}</td>
+          <td>{{ ponude.jedinicnaCijena }}</td>
+          <td>{{ ponude.selected }}</td>
+          <td>{{ ponude.sifraPonudjaca }}</td>
+          <td>{{ ponude.karakteristika }}</td>
+          <!--          <td>{{ ponude.createdBy }}</td>-->
+          <!--          <td>{{ ponude.createdDate }}</td>-->
+          <!--          <td>{{ ponude.lastModifiedBy }}</td>-->
+          <!--          <td>{{ ponude.lastModifiedDate }}</td>-->
           <td class="text-end">
             <div class="btn-group">
               <button type="submit" [routerLink]="['/ponude', ponude.id, 'view']" class="btn btn-info btn-sm" data-cy="entityDetailsButton">
@@ -160,15 +160,15 @@
                 <span class="d-none d-md-inline" jhiTranslate="entity.action.view">Pregled</span>
               </button>
 
-              <!--              <button type="submit" [routerLink]="['/ponude', ponude.id, 'edit']" class="btn btn-primary btn-sm" data-cy="entityEditButton">-->
-              <!--                <fa-icon icon="pencil-alt"></fa-icon>-->
-              <!--                <span class="d-none d-md-inline" jhiTranslate="entity.action.edit">Izmeni</span>-->
-              <!--              </button>-->
+              <button type="submit" [routerLink]="['/ponude', ponude.id, 'edit']" class="btn btn-primary btn-sm" data-cy="entityEditButton">
+                <fa-icon icon="pencil-alt"></fa-icon>
+                <span class="d-none d-md-inline" jhiTranslate="entity.action.edit">Izmeni</span>
+              </button>
 
-              <!--              <button type="submit" (click)="delete(ponude)" class="btn btn-danger btn-sm" data-cy="entityDeleteButton">-->
-              <!--                <fa-icon icon="times"></fa-icon>-->
-              <!--                <span class="d-none d-md-inline" jhiTranslate="entity.action.delete">Obriši</span>-->
-              <!--              </button>-->
+              <button type="submit" (click)="delete(ponude)" class="btn btn-danger btn-sm" data-cy="entityDeleteButton">
+                <fa-icon icon="times"></fa-icon>
+                <span class="d-none d-md-inline" jhiTranslate="entity.action.delete">Obriši</span>
+              </button>
             </div>
           </td>
         </tr>
