--- a/src/main/webapp/app/entities/prvorangirani/list/prvorangirani.component.html
+++ b/src/main/webapp/app/entities/prvorangirani/list/prvorangirani.component.html
@@ -7,7 +7,7 @@
         <fa-icon icon="sync" [spin]="isLoading"></fa-icon>
         <span jhiTranslate="tenderApp.prvorangirani.home.refreshListLabel">Refresh list</span>
       </button>
-      <button type="button" class="btn btn-primary" (click)="exportTable()">Excel</button>
+      <button type="button" class="btn btn-primary" (click)="Excel()">Excel</button>
     </div>
   </h2>
   <select
