--- a/src/main/webapp/app/layouts/navbar/navbar.component.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.component.html
@@ -66,7 +66,7 @@
             <li>
               <a
                 class="dropdown-item"
-                routerLink="specifikacije"
+                routerLink="/specifikacije/new"
                 routerLinkActive="active"
                 [routerLinkActiveOptions]="{ exact: true }"
                 (click)="collapseNavbar()"
@@ -78,7 +78,7 @@
             <li>
               <a
                 class="dropdown-item"
-                routerLink="view-ponude"
+                routerLink="/ponude/new"
                 routerLinkActive="active"
                 [routerLinkActiveOptions]="{ exact: true }"
                 (click)="collapseNavbar()"
@@ -90,7 +90,7 @@
             <li>
               <a
                 class="dropdown-item"
-                routerLink="postupci"
+                routerLink="postupci/new"
                 routerLinkActive="active"
                 [routerLinkActiveOptions]="{ exact: true }"
                 (click)="collapseNavbar()"
@@ -102,7 +102,7 @@
             <li>
               <a
                 class="dropdown-item"
-                routerLink="ponudjaci"
+                routerLink="ponudjaci/new"
                 routerLinkActive="active"
                 [routerLinkActiveOptions]="{ exact: true }"
                 (click)="collapseNavbar()"
