--- a/src/main/webapp/app/entities/view-ponude/list/view-ponude.component.html
+++ b/src/main/webapp/app/entities/view-ponude/list/view-ponude.component.html
@@ -33,6 +33,7 @@
     placeholder=".form-control-sm"
     [(ngModel)]="sifraPonude"
     (change)="loadSifraPonude()"
+    (change)="sumPostupciPonude()"
     cl="loadPageSifraPonude()"
   >
     <option value="" selected disabled>Please select</option>
