--- a/src/main/webapp/app/entities/vrednovanje/list/vrednovanje.component.html
+++ b/src/main/webapp/app/entities/vrednovanje/list/vrednovanje.component.html
@@ -188,14 +188,14 @@
           <td></td>
           <td></td>
           <td></td>
-          <td>Ukupno ponudjeno:</td>
-          <td>{{ ukupno_ponudjeno }}</td>
+          <!--          <td>Ukupno ponudjeno:</td>-->
+          <!--          <td>{{ ukupno_ponudjeno }}</td>-->
           <td></td>
           <td></td>
           <td></td>
           <td></td>
-          <td>Ukupno procjenjeno:</td>
-          <td>{{ ukupno_procjenjeno }}</td>
+          <!--          <td>Ukupno procjenjeno:</td>-->
+          <!--          <td>{{ ukupno_procjenjeno }}</td>-->
           <td></td>
           <td></td>
           <td></td>
