--- a/src/main/webapp/app/entities/prvorangirani/list/prvorangirani.component.html
+++ b/src/main/webapp/app/entities/prvorangirani/list/prvorangirani.component.html
@@ -19,6 +19,8 @@
     placeholder="Unesite Ponudjaca"
     [(ngModel)]="sifraPonude"
     (change)="loadSifraPonude()"
+    (change)="sumPostupciPonudePonudjeno()"
+    (change)="sumPostupciPonudeProcijenjeno()"
     cl="loadPageSifraPonude()"
   >
     <option value="" selected disabled>Please select</option>
