--- a/src/main/webapp/app/entities/postupci/list/postupci.component.html
+++ b/src/main/webapp/app/entities/postupci/list/postupci.component.html
@@ -92,24 +92,22 @@
         </tr>
       </thead>
       <tbody>
-        <tr
-          [routerLink]="['/tenderi-home']"
-          [queryParams]="{ sifra: postupci.sifraPostupka }"
-          class="hovers"
-          *ngFor="let postupci of postupcis; trackBy: trackId"
-          data-cy="entityTable"
-        >
+        <tr class="hovers" *ngFor="let postupci of postupcis; trackBy: trackId" data-cy="entityTable">
           <td>
             <a [routerLink]="['/postupci', postupci.id, 'view']">{{ postupci.id }}</a>
           </td>
-          <td>{{ postupci.sifraPostupka }}</td>
-          <td>{{ postupci.brojTendera }}</td>
-          <td>{{ postupci.opisPostupka }}</td>
+          <td [routerLink]="['/tenderi-home']" [queryParams]="{ sifra: postupci.sifraPostupka }">{{ postupci.sifraPostupka }}</td>
+          <td [routerLink]="['/tenderi-home']" [queryParams]="{ sifra: postupci.sifraPostupka }">{{ postupci.brojTendera }}</td>
+          <td [routerLink]="['/tenderi-home']" [queryParams]="{ sifra: postupci.sifraPostupka }">{{ postupci.opisPostupka }}</td>
           <td>{{ postupci.vrstaPostupka }}</td>
-          <td>{{ postupci.datumObjave | formatMediumDate }}</td>
-          <td>{{ postupci.datumOtvaranja | formatMediumDate }}</td>
-          <td>{{ postupci.kriterijumCijena }}</td>
-          <td>{{ postupci.drugiKriterijum }}</td>
+          <td [routerLink]="['/tenderi-home']" [queryParams]="{ sifra: postupci.sifraPostupka }">
+            {{ postupci.datumObjave | formatMediumDate }}
+          </td>
+          <td [routerLink]="['/tenderi-home']" [queryParams]="{ sifra: postupci.sifraPostupka }">
+            {{ postupci.datumOtvaranja | formatMediumDate }}
+          </td>
+          <td [routerLink]="['/tenderi-home']" [queryParams]="{ sifra: postupci.sifraPostupka }">{{ postupci.kriterijumCijena }}</td>
+          <td [routerLink]="['/tenderi-home']" [queryParams]="{ sifra: postupci.sifraPostupka }">{{ postupci.drugiKriterijum }}</td>
           <td class="text-end">
             <div class="btn-group">
               <button
