--- a/src/main/webapp/app/entities/prvorangirani/list/prvorangirani.component.html
+++ b/src/main/webapp/app/entities/prvorangirani/list/prvorangirani.component.html
@@ -23,7 +23,7 @@
     (change)="sumPostupciPonudeProcijenjeno()"
     cl="loadPageSifraPonude()"
   >
-    <option value="" selected disabled>Please select</option>
+    <option value="" selected disabled>Izaberite ponudjaca</option>
     <!--        <option [ngValue]="null">Vrati</option>-->
     <option id="ponudjac" [ngValue]="ponudjaciOption.sifraPonude" *ngFor="let ponudjaciOption of ponudjaci">
       {{ ponudjaciOption.nazivPonudjaca }}
