--- a/src/main/webapp/app/entities/view-ponude/delete/view-ponude-delete-dialog.component.html
+++ b/src/main/webapp/app/entities/view-ponude/delete/view-ponude-delete-dialog.component.html
@@ -1,4 +1,4 @@
-<form *ngIf="viewPonude" name="deleteForm" (ngSubmit)="confirmDelete(viewPonude.id!)">
+<form *ngIf="Ponude" name="deleteForm" (ngSubmit)="confirmDelete(Ponude.id!)">
   <div class="modal-header">
     <h4 class="modal-title" data-cy="viewPonudeDeleteDialogHeading" jhiTranslate="entity.delete.title">Potvrdi brisanje</h4>
 
@@ -7,8 +7,8 @@
 
   <div class="modal-body">
     <jhi-alert-error></jhi-alert-error>
-    <p id="jhi-delete-viewPonude-heading" jhiTranslate="tenderApp.viewPonude.delete.question" [translateValues]="{ id: viewPonude.id }">
-      Da li ste sigurni da želite da obrišete View Ponude pod nazivom {{ viewPonude.id }}?
+    <p id="jhi-delete-viewPonude-heading" jhiTranslate="tenderApp.viewPonude.delete.question" [translateValues]="{ id: Ponude.id }">
+      Da li ste sigurni da želite da obrišete View Ponude pod nazivom {{ Ponude.id }}?
     </p>
   </div>
 
