--- a/src/main/webapp/app/layouts/navbar/navbar.component.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.component.html
@@ -63,30 +63,30 @@
             </span>
           </a>
           <ul class="dropdown-menu" ngbDropdownMenu aria-labelledby="entity-menu">
-            <li>
-              <a
-                class="dropdown-item"
-                routerLink="/specifikacije/new"
-                routerLinkActive="active"
-                [routerLinkActiveOptions]="{ exact: true }"
-                (click)="collapseNavbar()"
-              >
-                <fa-icon icon="asterisk" [fixedWidth]="true"></fa-icon>
-                <span jhiTranslate="global.menu.entities.specifikacije">Specifikacije</span>
-              </a>
-            </li>
-            <li>
-              <a
-                class="dropdown-item"
-                routerLink="/ponude/new"
-                routerLinkActive="active"
-                [routerLinkActiveOptions]="{ exact: true }"
-                (click)="collapseNavbar()"
-              >
-                <fa-icon icon="asterisk" [fixedWidth]="true"></fa-icon>
-                <span jhiTranslate="global.menu.entities.ponude">Ponude</span>
-              </a>
-            </li>
+            <!--            <li>-->
+            <!--              <a-->
+            <!--                class="dropdown-item"-->
+            <!--                routerLink="/specifikacije/new"-->
+            <!--                routerLinkActive="active"-->
+            <!--                [routerLinkActiveOptions]="{ exact: true }"-->
+            <!--                (click)="collapseNavbar()"-->
+            <!--              >-->
+            <!--                <fa-icon icon="asterisk" [fixedWidth]="true"></fa-icon>-->
+            <!--                <span jhiTranslate="global.menu.entities.specifikacije">Specifikacije</span>-->
+            <!--              </a>-->
+            <!--            </li>-->
+            <!--            <li>-->
+            <!--              <a-->
+            <!--                class="dropdown-item"-->
+            <!--                routerLink="/ponude/new"-->
+            <!--                routerLinkActive="active"-->
+            <!--                [routerLinkActiveOptions]="{ exact: true }"-->
+            <!--                (click)="collapseNavbar()"-->
+            <!--              >-->
+            <!--                <fa-icon icon="asterisk" [fixedWidth]="true"></fa-icon>-->
+            <!--                <span jhiTranslate="global.menu.entities.ponude">Ponude</span>-->
+            <!--              </a>-->
+            <!--            </li>-->
             <li>
               <a
                 class="dropdown-item"
