--- a/src/main/webapp/app/entities/prvorangirani/list/prvorangirani.component.html
+++ b/src/main/webapp/app/entities/prvorangirani/list/prvorangirani.component.html
@@ -11,7 +11,7 @@
     </div>
   </h2>
   <select
-    *ngIf="postupak"
+    *ngIf="prvorangiranis?.length != 0"
     class="form-control"
     id="field_sifraPonudjaca"
     data-cy="sifraPonudjaca"
