--- a/src/main/webapp/app/entities/view-ponude/list/view-ponude.component.html
+++ b/src/main/webapp/app/entities/view-ponude/list/view-ponude.component.html
@@ -3,7 +3,16 @@
     <span jhiTranslate="tenderApp.viewPonude.home.title">View Ponudes</span>
     <div class="mb-3">
       <label for="formFile" (click)="fileInput.click()" class="form-label"><span></span></label>
-      <input #fileInput type="file" id="file" (input)="uploadFile()" class="form-control" type="file" id="formFile" />
+      <input
+        #fileInput
+        type="file"
+        id="file"
+        (input)="uploadFile()"
+        (change)="clearInputFile()"
+        class="form-control"
+        type="file"
+        id="formFile"
+      />
     </div>
     <div class="d-flex justify-content-end">
       <button class="btn btn-info me-2" (click)="loadSifraPostupka()" [disabled]="isLoading">
@@ -26,7 +35,7 @@
     </div>
   </h2>
   <select
-    *ngIf="postupak"
+    *ngIf="viewPonudes?.length != 0"
     class="form-control"
     id="field_sifraPonudjaca"
     data-cy="sifraPonudjaca"
