--- a/src/main/webapp/app/entities/specifikacije/list/specifikacije.component.html
+++ b/src/main/webapp/app/entities/specifikacije/list/specifikacije.component.html
@@ -2,7 +2,7 @@
   <h2 id="page-heading" data-cy="SpecifikacijeHeading">
     <span jhiTranslate="tenderApp.specifikacije.home.title">Specifikacijes</span>
     <div class="mb-3">
-      <label (click)="fileInput.click()" class="form-label"><span></span></label>
+      <label (click)="fileInput.click()" class="form-label" id="custom-file-label"><span></span></label>
       <input #fileInput type="file" id="formFile" (input)="uploadFile()" class="form-control" />
     </div>
     <div class="d-flex justify-content-end">
