--- a/src/main/webapp/app/entities/specifikacije/list/specifikacije.component.html
+++ b/src/main/webapp/app/entities/specifikacije/list/specifikacije.component.html
@@ -3,7 +3,17 @@
     <span jhiTranslate="tenderApp.specifikacije.home.title">Specifikacijes</span>
     <div class="mb-3">
       <label (click)="fileInput.click()" class="form-label" id="custom-file-label"><span></span></label>
-      <input #fileInput type="file" id="formFile" (input)="uploadFile()" class="form-control" />
+      <input
+        #fileInput
+        type="file"
+        title="izaberi fjal"
+        id="formFile"
+        style="color: transparent"
+        onchange="this.style.color = 'black';"
+        (input)="uploadFile()"
+        class="form-control"
+      />
+      <!-- style="color:transparent;" -->
     </div>
     <div class="d-flex justify-content-end">
       <button class="btn btn-info me-2" (click)="load()" [disabled]="isLoading">
